# copter

./: .gitignore  Cargo.toml  README.md
assets/: map.json
nakama/: docker-compose.yml
src/: main.rs  nodes.rs
src/nodes/: bullet.rs  bullets.rs  camera.rs  player.rs
