[package]
name = "copter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
macroquad = "0.3.25"
macroquad-tiled = "0.1.1"

[[bin]]
name = "cam"
path = "src/cam.rs"


[[bin]]
name = "main"
path = "src/main.rs"
